--- a/scss/_help.scss
+++ b/scss/_help.scss
@@ -87,6 +87,10 @@
                             height: 45px;
                             @include optionStyle_1;
                             font-size: 17px;
+
+                            &::before {
+                                display: none;
+                            }
                         }
                     }
                 }
