--- a/scss/_jumpWindow.scss
+++ b/scss/_jumpWindow.scss
@@ -484,9 +484,15 @@
 
         &.betWindow {
             display: none;
-            padding-top: 54px;
             flex-direction: column;
             position: relative;
+
+            &::before {
+                content: "";
+                width: 100%;
+                height: 50px;
+                background: $jumpWindow_titleBg;
+            }
 
             &.display {
                 display: flex;
@@ -494,27 +500,33 @@
 
             .close_ic {
                 position: absolute;
-                top: 24px;
+                top: 16px;
                 right: 24px;
-                width: 25px;
-                height: 25px;
+                width: 20px;
+                height: 20px;
                 cursor: pointer;
             }
 
             .betTitle {
-                width: 100%;
+                // width: 100%;
                 height: auto;
                 box-sizing: border-box;
-                padding-left: 45px;
-                font-size: 29px;
+                // padding-left: 185px;
+                // padding-top: 13px;
+                font-size: 21px;
                 font-weight: bold;
+                position: absolute;
+                top: 2.5%;
+                left: 50%;
+                transform: translate(-50%);
+                color: $jumpWindow_Titlecolor;
             }
 
             form {
                 width: 100%;
                 height: auto;
                 box-sizing: border-box;
-                margin-top: 40px;
+                margin-top: 35px;
                 padding: 0 45px;
 
                 .row {
