--- a/scss/_innerPage.scss
+++ b/scss/_innerPage.scss
@@ -322,15 +322,19 @@
                                                     width: 257px;
                                                 }
 
+                                                .notable {
+                                                    background: $notable;
+                                                }
+
                                                 .remind {
                                                     font-size: 12px;
                                                     padding-left: 110px;
-                                                    color: $remindColor_Second;
+                                                    color: $remindColor_Main;
                                                     font-weight: bold;
                                                     margin-top: 6px;
 
                                                     &.np {
-
+                                                        color: $remindColor_Second;
                                                         span {
                                                             color:$main_Color7;
                                                         }
@@ -1669,6 +1673,10 @@
                                                     @include inputStyle;
                                                 }
 
+                                                .notable {
+                                                    background: $notable;
+                                                }
+
                                                 .err {
                                                     display: none;
                                                     font-size: 12px;
@@ -1686,7 +1694,7 @@
                                                     position: absolute;
                                                     left: 0;
                                                     bottom: -16px;
-                                                    color: $remindColor_Second;
+                                                    color: $remindColor_Main;
                                                 }
 
                                                 button {
@@ -2314,11 +2322,11 @@
                                         align-items: center;
 
                                         &.first {
-                                            color: $main_Color3;
+                                            color: $jumpWindow_Date;
                                         }
 
                                         span {
-                                            color: $main_Color3;
+                                            color: $jumpWindow_Date;
 
                                             &.now {
                                                 color: $bAseactive;
@@ -2372,7 +2380,7 @@
     
                                             &.smallTitle {
                                                 margin-right: 25px;
-                                                color: $main_Color3;
+                                                color: $jumpWindow_Date;
                                             }
     
                                             &.cur {
@@ -2432,11 +2440,11 @@
                                         align-items: center;
 
                                         &.first {
-                                            color: $main_Color3;
+                                            color: $jumpWindow_Date;
                                         }
 
                                         span {
-                                            color: $main_Color3;
+                                            color: $jumpWindow_Date;
 
                                             &.now {
                                                 color: $bAseactive;
@@ -2490,7 +2498,7 @@
     
                                             &.smallTitle {
                                                 margin-right: 25px;
-                                                color:$main_Color3;
+                                                color:$jumpWindow_Date;
                                             }
     
                                             &.cur {
@@ -3496,7 +3504,7 @@
                                     left: 108px;
                                     font-size: 12px;
                                     letter-spacing: 1px;
-                                    color: $main_Color3;
+                                    color: $remindColor_Main;
                                 }
                             }
 
@@ -4293,7 +4301,7 @@
                                     margin: 8px 0 0 26px;
                                     font-size: 12px;
                                     letter-spacing: 1px;
-                                    color: $remindColor_Second;
+                                    color: $remindColor_Main;
                                 }
                             }
                         }
