--- a/scss/_jumpWindow.scss
+++ b/scss/_jumpWindow.scss
@@ -526,7 +526,7 @@
                 width: 100%;
                 height: auto;
                 box-sizing: border-box;
-                margin-top: 35px;
+                margin-top: 20px;
                 padding: 0 45px;
 
                 .row {
@@ -535,7 +535,12 @@
                     width: 100%;
                     height: 42px;
                     margin-bottom: 10px;
-                    justify-content: center;
+                    // justify-content: center;
+
+                    &:nth-of-type(3) {
+                        margin: 2px;
+                        margin-top: -5px;
+                    }
 
                     &.forBtn {
                         justify-content: flex-end;
@@ -549,6 +554,10 @@
                         color: $jumpWindow_Text;
                     }
 
+                    span {
+                        font-size: 28px;
+                    }
+
                     input {
                         width: 267px;
                         height: 42px;
@@ -560,7 +569,7 @@
                         width: 24px;
                         height: 21px;
                         transform: rotate(90deg);
-                        margin-left: 120px;
+                        margin-left: 240px;
                     }
 
                     .btnBox {
