--- a/scss/styleGroup/_imgStyle.scss
+++ b/scss/styleGroup/_imgStyle.scss
@@ -604,6 +604,11 @@ main .mainWrap {
     background-size: 100%;
 }
 
+.inviteWrap .qrCode {
+    background: url('../images/qr.png') no-repeat;
+    background-size: 100%;
+}
+
 //gameWrap .mainImg左圖
 
 .gameWrap {
