--- a/scss/_innerPage.scss
+++ b/scss/_innerPage.scss
@@ -2901,7 +2901,7 @@
                                             transform: translateY(-50%);
                                             top: 50%;
                                             right: 0px;
-                                            background: $mainBG_2;
+                                            background: $main_Border_2;
                                         }
                                     }
 
@@ -3636,7 +3636,7 @@
             }
         }
 
-        //invite
+        //invite 邀請會員
         .inviteWrap {
             display: flex;
 
@@ -3669,14 +3669,75 @@
                         height: auto;
                         padding: 15px 22px 18px;
 
-                        ul {
-                            width: 50%;
-                            // float: left;
-                            li {
-                                width: auto;
-                                height: 60px;
+                       .invitebox {
+                           height: auto;
+                           width: 100%;
+                           display: flex;
+                           margin-bottom: 20px;
+
+                           ::marker {
+                               color: transparent;
+                           }
+
+                           .left {
+                               width: 50%;
+
+                               .li {
+
+                                margin-bottom: 20px;
+
+
+                                span {
+                                    font-size: 14px;
+                                    font-weight: bold;
+                                    margin: 0 25px 20px 0 ;
+
+                                    button {
+                                        width: 94px;
+                                        height: 27px;
+                                        margin-left: 20px;
+                                        border-radius: 3px;
+                                        @include smallBtn;
+                                    }
+
+                                    input {
+                                       padding: 4px 15px;
+                                       @include inputStyle;
+                                    }
+                                }
                             }
-                        }
+
+                               
+                           }
+
+                           .right {
+                               width: 50%;
+                               display: flex;
+
+                               .forQR {
+                                   margin-top: 10px;
+
+                                span {
+                                    font-size: 14px;
+                                    font-weight: bold;
+                                    margin-right: 10px;
+                                }
+
+                                h1 {
+                                    font-size: 14px;
+                                    font-weight: bold;
+                                    margin: 5px 0 0 22px;
+                                }
+
+
+                            }
+                               .qrCode {
+                                width: 100px;
+                                height: 100px;
+                                margin: -15px 0px 0 60px;
+                              }
+                           }
+                       }
 
                         .inviteimg {
                             height:485px;
@@ -4107,6 +4168,372 @@
                 //         }
                 //     }
                 // }
+            }
+        }
+
+        //dividend 查詢紅利
+        .dividendWrap {
+            width: 1140px;
+
+            .top {
+                width: 100%;
+                height: 50px;
+                background: $mainBG_2;
+                box-shadow: 0 5px 10px -5px $boxShadow_3;
+                color:$main_Color;
+                display: flex;
+                align-items: center;
+                box-sizing: border-box;
+                padding: 0 22px;
+                font-weight: bold;
+                font-size: 20px;
+                letter-spacing: 2px;
+                border-radius: 5px 5px 0 0;
+            }
+
+            .bottom {
+                width: 100%;
+                height: auto;
+
+                .header {
+                    width: 100%;
+                    height: auto;
+
+                    .tabs {
+                        width: 100%;
+                        height: auto;
+                        box-sizing: border-box;
+                        padding: 0 24px;
+                        display: flex;
+
+                        li {
+                            min-width: 105px;
+                            height: 35px;
+                            line-height: 35px;
+                            margin: 0 7px 0 0;
+                            @include  tabs_btn;
+                        }
+                    }
+                }
+
+                .dealBox {
+                    width: 100%;
+                    height: auto;
+                    background: $mainBG_2;
+                    box-shadow: 0 5px 10px -5px $boxShadow_3;
+                    border-radius: 0 0 5px 5px;
+                    display: none;
+
+                    &.display {
+                        display: block;
+                    }
+
+                    .reviewWrap {
+                        width: 100%;
+                        height: auto;
+
+                        .search {
+                            width: 100%;
+                            height: auto;
+                            box-sizing: border-box;
+                            padding: 10px 18px 24px 24px;
+                            border-bottom: solid 1px $main_Border_2;
+
+                            form {
+                                width: 100%;
+                                height: auto;
+                                display: flex;
+                                position: relative;
+
+                                .bigBox {
+                                    width: 345px;
+                                    height: auto;
+
+                                    .innerBox {
+                                        width: 100%;
+                                        height: auto;
+
+                                        .row {
+                                            width: 100%;
+                                            height: auto;
+                                            display: flex;
+                                            align-items: center;
+                                            margin-bottom: 20px;
+
+                                            &:last-child {
+                                                margin: 0;
+                                            }
+
+                                            .smallTitle {
+                                                width: auto;
+                                                max-width: 48px;
+                                                font-size: 14px;
+                                                margin-right: 25px;
+                                                letter-spacing: 1px;
+                                                color: $main_Color;
+                                                font-weight: bold;
+                                            }
+
+                                            .inputBox {
+                                                width: 286px;
+                                                height: auto;
+
+                                                select {
+                                                    width: 258px;
+                                                    height: 42px;
+                                                    @include select_Style;
+                                                }
+
+                                                input {
+                                                    width: 258px;
+                                                    height: 42px;
+                                                    @include inputStyle;
+                                                    padding: 0 15px;
+                                                    box-sizing: border-box;
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+
+                                .btnBox {
+                                    width: auto;
+                                    height: auto;
+                                    display: flex;
+                                    align-items: flex-end;
+
+                                    button {
+                                        width: 72px;
+                                        height: 43px;
+                                        margin-right: 8px;
+                                        @include dateBtn;
+                                    }
+                                }
+
+                                .checkBtn {
+                                    width: auto;
+                                    height: auto;
+                                    position: absolute;
+                                    right: 0px;
+                                    bottom: 0px;
+
+                                    button {
+                                        width: 152px;
+                                        height: 41px;
+                                        @include mainBtn;
+                                    }
+                                }
+                            }
+                        }
+
+                        .fakeTable {
+                            width: 100%;
+                            height: auto;
+                            box-sizing: border-box;
+                            padding: 0 0px 10px;
+
+                            .noData {
+                                display: none;
+                                width: 100%;
+                                height: 233px;
+                                align-items: center;
+                                justify-content: center;
+                                letter-spacing: 1px;
+                                color: $main_Color6;
+                                font-weight: bold;
+
+                                &.display {
+                                    display: flex;
+                                }
+                            }
+
+                            table {
+                                width: 100%;
+                                height: auto;
+                                margin: 20px 0 60px;
+
+                                tr {
+
+                                    th,td {
+                                        height: 50px;
+                                        vertical-align: middle;
+                                        text-align: center;
+                                        font-size: 13px;
+                                        letter-spacing: 1px;
+                                        font-weight: bold;
+                                        color: $main_Color;
+                                        position: relative;
+                                        border-bottom: solid 2px $specailBorder;
+
+                                        &:last-child {
+
+                                            &::before {
+                                                display: none;
+                                            }
+                                        }
+
+                                        &::before {
+                                            content: "";
+                                            position: absolute;
+                                            width: 1px;
+                                            height: 50%;
+                                            transform: translateY(-50%);
+                                            top: 50%;
+                                            right: 0px;
+                                            background:$main_Border_2;
+                                        }
+                                    }
+
+                                    td {
+                                        width: 25%;
+                                        border-bottom: 1px solid $main_Border_2;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+                .dealBox2 {
+                    display: none;
+                    width: 100%;
+                    height: auto;
+                    min-height: 440px;
+                    background: $mainBG_2;
+                    box-shadow: 0px 5px 10px -5px $boxShadow_3;
+                    border-radius: 5px;
+                    box-sizing: border-box;
+                    padding: 20px 0px 24px;
+
+                    &.display {
+                        display: block;
+                    }
+
+                    h1 {
+                        padding: 20px 24px;
+                        font-size: 17px;
+                        letter-spacing: 2px;
+                        color: $main_Color7;
+                        font-weight: bold;
+                    }
+                    table {
+                        width: 100%;
+                        height: auto;
+                        margin: 20px 0 7px;
+
+                        tr {
+
+                            border-bottom: 1px solid $main_Border_2;
+
+                            th,td {
+                                height: 50px;
+                                vertical-align: middle;
+                                text-align: center;
+                                font-size: 13px;
+                                letter-spacing: 1px;
+                                font-weight: bold;
+                                color: $main_Color;
+                                position: relative;
+                                border-bottom: solid 2px $specailBorder;
+
+                                &:last-child {
+
+                                    &::before {
+                                        display: none;
+                                    }
+                                }
+
+                                &::before {
+                                    content: "";
+                                    position: absolute;
+                                    width: 1px;
+                                    height: 42%;
+                                    transform: translateY(-50%);
+                                    top: 50%;
+                                    right: 0px;
+                                    background:$main_Border_2;
+                                }
+                            }
+
+                            td {
+                                border-bottom: none;
+
+                                &.wNo {
+                                    width: 13%;
+                                }
+                                &.wStatus {
+                                    width: 14%;
+                                }
+
+                                &.wVal {
+                                    width: 13%;
+                                    color:$main_Color4;
+                                }
+                                &.wLimit {
+                                    width: 13%;
+                                }
+                                &.wShift {
+                                    width: 13%;
+                                    color: $bAseactive;
+                                }
+                                &.wDate {
+                                    width: 14.5%;
+                                }
+                                &.wDrawback {
+                                    width: 9.5%;
+                                }
+                                &.wBethistory {
+                                    width: 6%;
+                                }
+                                &.wPs {
+                                    width: 5%;
+                                }
+
+                                &::before {
+                                    display: none;
+                                }
+
+                                .d-btn {
+                                    width: 50px;
+                                    height: 30px;
+                                    border-radius: 3px;
+                                    cursor: no-drop;
+                                    @include disable;
+                                }
+                                .b-btn {
+                                    width: 50px;
+                                    height: 30px;
+                                    border-radius: 3px;
+                                    @include bet_btn;
+                                }
+
+                                .expand-btn {
+                                    background: none;
+                                    font-size: 22px;
+                                    font-weight: bolder;
+                                    height: 30px;
+                                    line-height: 40px;
+                                    color: $main_Color3;
+                                }
+                            }
+                        }
+                    }
+
+                    .noData {
+                        display: none;
+                        width: 100%;
+                        height: 533px;
+                        justify-content: center;
+                        align-items: center;
+                        letter-spacing: 1px;
+                        color: $main_Color6;
+                        font-weight: bold;
+
+                        &.display {
+                            display: flex;
+                        }
+                    }
+
+                }
             }
         }
 
